--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -150,6 +150,6 @@
   position: fixed;
   top: 0;
   height: 3px;
-  background: #fff;
+  background: #ffffff90;
   width: 0%;
 }
